Update Core.Maui.yml for Azure Pipelines

--- a/.pipelines/Core.Maui.yml
+++ b/.pipelines/Core.Maui.yml
@@ -19,7 +19,7 @@ jobs:
   
   pool:
     #vmImage: windows-latest
-    name: Default 
+    name: Windows 
   steps:
   - checkout: self
   - task: DotNetCoreCLI@2
