--- a/src/PolyhydraGames.Core.Maui.csproj
+++ b/src/PolyhydraGames.Core.Maui.csproj
@@ -24,6 +24,13 @@
 		<Compile Remove="**\*net.cs" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Compile Remove="Platforms\net90\**" />
+	  <EmbeddedResource Remove="Platforms\net90\**" />
+	  <MauiCss Remove="Platforms\net90\**" />
+	  <MauiXaml Remove="Platforms\net90\**" />
+	  <None Remove="Platforms\net90\**" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="12.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.6" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.80" />
@@ -68,13 +75,6 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Platforms\net90\" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <PackageReference Update="SonarAnalyzer.CSharp" Version="10.12.0.118525" />
-	</ItemGroup>
+ 
 
 </Project>
