--- a/src/PolyhydraGames.Core.Maui.csproj
+++ b/src/PolyhydraGames.Core.Maui.csproj
@@ -43,7 +43,7 @@
 		<PackageReference Include="PolyhydraGames.Core.ReactiveUI" Version="1.0.0.50" />
 		<PackageReference Include="PolyhydraGames.Extensions" Version="2.1.1.56" />
 		<PackageReference Include="ReactiveUI" Version="20.3.1" />
-		<PackageReference Include="ReactiveUI.Fody" Version="$(ReactiveUIVersion)" />
+		<PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
 	</ItemGroup>
  
 	<ItemGroup>
@@ -74,6 +74,10 @@
 	  <MauiXaml Update="Views\MenuPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+ 
+	<ItemGroup>
+	  <PackageReference Update="SonarAnalyzer.CSharp" Version="10.12.0.118525" />
 	</ItemGroup>
  
 
